@@ -6,6 +6,7 @@ lldpd (1.0.5)
     + Stricter on LLDP incoming frames validation.
     + Add support for VLAN-aware bridges for Linux (no range support).
     + Add support for 802.3BT (no SNMP support).
+    + Add support for millisecond-grained tx-interval (Jean-Pierre Tosoni).
   * Fix:
     + Don't clear chassis TLV on shutdown LLDPDU.
     + Don't require/display powerpairs for Dot3 power when device type
